--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Giphy Party!</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
-<body>
 
+<body>
+<div class="container">
+  <form class="row" id="search-form">
+    <div class="col-8">
+      <input class="form-control" type="text" id="query" value="Robots">
+    </div>
+    <div class="col-4">
+      <input class="btn btn-primary" type="submit" id="submit" value="Find Me A GIF">
+    </div>
+  </form>
+</div>
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="app.js"></script>
