--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </div>
   </form>
 </div>
+<img src="" class="img-thumbnail">
+</div>
+
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="app.js"></script>
